# molmc

./: .gitignore  Desafio2-PGF5216.py  LICENSE  Lista_1_mecstat.ipynb  README.md  desafio-1-PGF5216.py  monte_carlo.py  pyproject.toml  run_1d.py  run_3d.py
comp-mol/: 1d_monte-carlo.py  3d_monte-carlo.py  README.md
examples/: run_1d.py  run_3d.py
mecstat/: README.md  worksheet_1.ipynb
src/molmc/: molmc.py
